<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/page_up"
        android:layout_width="@dimen/car_scroll_bar_button_size"
        android:layout_height="@dimen/car_scroll_bar_button_size"
        android:background="@drawable/car_button_ripple_background"
        android:contentDescription="@string/scroll_bar_page_up_button"
        android:focusable="false"
        android:hapticFeedbackEnabled="false"
        android:src="@drawable/ic_up"
        android:scaleType="centerInside" />

    <TextView
        android:textAppearance="@style/TextAppearance.Car.AlphaJumpButton"
        android:id="@+id/alpha_jump"
        android:layout_width="@dimen/car_scroll_bar_button_size"
        android:layout_height="@dimen/car_scroll_bar_button_size"
        android:background="@drawable/car_alpha_jump_button_background"
        android:focusable="false"
        android:hapticFeedbackEnabled="false"
        android:gravity="center"
        android:text="@string/alpha_jump_placeholder_text"
        android:visibility="gone" />

    <View
        android:id="@+id/scrollbar_thumb"
        android:layout_width="@dimen/car_scroll_bar_thumb_width"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/car_scrollbar_thumb" />

    <ImageButton
        android:id="@+id/page_down"
        android:layout_width="@dimen/car_scroll_bar_button_size"
        android:layout_height="@dimen/car_scroll_bar_button_size"
        android:background="@drawable/car_button_ripple_background"
        android:contentDescription="@string/scroll_bar_page_down_button"
        android:focusable="false"
        android:hapticFeedbackEnabled="false"
        android:src="@drawable/ic_down"
        android:scaleType="centerInside" />
</merge>
