<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.car.widget.CarToolbar
        android:background="@android:color/black"
        android:id="@+id/car_toolbar"
        android:layout_height="150dp"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_arrow_back_grey_50"
        app:titleTextAppearance="@style/TextAppearance.Car.Body1.Light" />
    <androidx.car.widget.PagedListView
        android:id="@+id/paged_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:showPagedListViewDivider="true"
        app:dividerStartMargin="@dimen/car_keyline_1"
        app:dividerEndMargin="@dimen/car_keyline_1"
        app:gutter="both"/>
</LinearLayout>

