/*
 * Copyright (C) 2017 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package androidx.car.widget;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.swipeDown;
import static androidx.test.espresso.action.ViewActions.swipeUp;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static androidx.test.espresso.contrib.RecyclerViewActions.scrollToPosition;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isEnabled;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

import static org.hamcrest.Matchers.equalTo;
import static org.hamcrest.Matchers.greaterThan;
import static org.hamcrest.Matchers.is;
import static org.hamcrest.Matchers.lessThan;
import static org.hamcrest.Matchers.not;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertThat;
import static org.mockito.Mockito.mock;
import static org.mockito.Mockito.times;
import static org.mockito.Mockito.verify;

import android.content.pm.PackageManager;
import android.content.res.Resources;
import android.graphics.drawable.Drawable;
import android.view.LayoutInflater;
import android.view.View;
import android.view.ViewGroup;
import android.widget.ImageView;
import android.widget.TextView;

import androidx.annotation.NonNull;
import androidx.car.test.R;
import androidx.recyclerview.widget.GridLayoutManager;
import androidx.recyclerview.widget.LinearLayoutManager;
import androidx.recyclerview.widget.OrientationHelper;
import androidx.recyclerview.widget.RecyclerView;
import androidx.test.annotation.UiThreadTest;
import androidx.test.core.app.ApplicationProvider;
import androidx.test.espresso.IdlingRegistry;
import androidx.test.espresso.IdlingResource;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;
import androidx.test.filters.SmallTest;
import androidx.test.platform.app.InstrumentationRegistry;
import androidx.test.rule.ActivityTestRule;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.After;
import org.junit.Assume;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.util.ArrayList;
import java.util.Arrays;
import java.util.List;

/** Unit tests for {@link PagedListView}. */
@RunWith(AndroidJUnit4.class)
@SmallTest
public final class PagedListViewTest {

    /**
     * Used by {@link TestAdapter} to calculate ViewHolder height so N items appear in one page of
     * {@link PagedListView}. If you need to test behavior under multiple pages, set number of items
     * to ITEMS_PER_PAGE * desired_pages.
     * Actual value does not matter.
     */
    private static final int ITEMS_PER_PAGE = 5;

    // For tests using GridLayoutManager - assuming each item takes one span, this is essentially
    // number of items per row.
    private static final int SPAN_COUNT = 5;

    @Rule
    public ActivityTestRule<PagedListViewTestActivity> mActivityRule =
            new ActivityTestRule<>(PagedListViewTestActivity.class);

    private PagedListViewTestActivity mActivity;
    private PagedListView mPagedListView;
    private ViewGroup.MarginLayoutParams mRecyclerViewLayoutParams;
    private LinearLayoutManager mRecyclerViewLayoutManager;

    /** Returns {@code true} if the testing device has the automotive feature flag. */
    private boolean isAutoDevice() {
        PackageManager packageManager = mActivityRule.getActivity().getPackageManager();
        return packageManager.hasSystemFeature(PackageManager.FEATURE_AUTOMOTIVE);
    }

    @Before
    public void setUp() {
        Assume.assumeTrue(isAutoDevice());

        mActivity = mActivityRule.getActivity();
        mPagedListView = mActivity.findViewById(R.id.paged_list_view);
        mRecyclerViewLayoutParams =
                (ViewGroup.MarginLayoutParams) mPagedListView.getRecyclerView().getLayoutParams();
        mRecyclerViewLayoutManager =
                (LinearLayoutManager) mPagedListView.getRecyclerView().getLayoutManager();

        IdlingRegistry.getInstance()
                .register(new PagedListViewScrollingIdlingResource(mPagedListView));
    }

    @After
    public void tearDown() {
        for (IdlingResource idlingResource : IdlingRegistry.getInstance().getResources()) {
            IdlingRegistry.getInstance().unregister(idlingResource);
        }
    }

    /** Sets up {@link #mPagedListView} with the given number of items. */
    private void setUpPagedListView(int itemCount) {
        try {
            mActivityRule.runOnUiThread(() -> {
                mPagedListView.setMaxPages(PagedListView.ItemCap.UNLIMITED);
                mPagedListView.setAdapter(
                        new TestAdapter(itemCount, mPagedListView.getHeight()));
            });
        } catch (Throwable throwable) {
            throwable.printStackTrace();
            throw new RuntimeException(throwable);
        }

        // Wait for the UI to lay itself out.
        waitForIdleSync();
    }

    /**
     * Sets up {@link #mPagedListView} with the given number of items and positions where an item
     * should be taller than the containing {@code PagedListView}.
     */
    private void setUpPagedListViewWithLongItems(int itemCount, List<Integer> longItemPositions) {
        try {
            mActivityRule.runOnUiThread(() -> {
                mPagedListView.setMaxPages(PagedListView.ItemCap.UNLIMITED);

                TestAdapter adapter =
                        new TestAdapter(itemCount, mPagedListView.getHeight());
                adapter.setLongItemPositions(longItemPositions);

                mPagedListView.setAdapter(adapter);
            });
        } catch (Throwable throwable) {
            throwable.printStackTrace();
            throw new RuntimeException(throwable);
        }

        // Wait for the UI to lay itself out.
        waitForIdleSync();
    }

    @Test
    public void testScrollBarIsInvisibleIfItemsDoNotFillOnePage() {
        setUpPagedListView(1 /* itemCount */);
        onView(withId(R.id.paged_scroll_view)).check(matches(not(isDisplayed())));
    }

    @Test
    public void testScrollButtonCallback() {
        int itemCount = ITEMS_PER_PAGE * 3;
        setUpPagedListView(itemCount);

        PagedListView.Callback mockedCallbackOne = mock(PagedListView.Callback.class);
        PagedListView.Callback mockedCallbackTwo = mock(PagedListView.Callback.class);
        PagedListView.Callback mockedCallbackThree = mock(PagedListView.Callback.class);

        mPagedListView.registerCallback(mockedCallbackOne);
        mPagedListView.registerCallback(mockedCallbackTwo);
        mPagedListView.registerCallback(mockedCallbackThree);

        // Move one page down.
        onView(withId(R.id.page_down)).perform(click());
        verify(mockedCallbackOne, times(1)).onScrollDownButtonClicked();
        verify(mockedCallbackTwo, times(1)).onScrollDownButtonClicked();
        verify(mockedCallbackThree, times(1)).onScrollDownButtonClicked();

        // Move one page up.
        onView(withId(R.id.page_up)).perform(click());
        verify(mockedCallbackOne, times(1)).onScrollUpButtonClicked();
        verify(mockedCallbackTwo, times(1)).onScrollUpButtonClicked();
        verify(mockedCallbackThree, times(1)).onScrollUpButtonClicked();

        mPagedListView.unregisterCallback(mockedCallbackOne);
        onView(withId(R.id.page_down)).perform(click());
        verify(mockedCallbackOne, times(1)).onScrollDownButtonClicked();
        verify(mockedCallbackTwo, times(2)).onScrollDownButtonClicked();
        verify(mockedCallbackThree, times(2)).onScrollDownButtonClicked();
    }

    @Test
    public void testMultipleScrollButtonCallback() {
        int itemCount = ITEMS_PER_PAGE * 4;
        setUpPagedListView(itemCount);

        PagedListView.Callback mockedCallback = mock(PagedListView.Callback.class);
        mPagedListView.registerCallback(mockedCallback);

        // Move one page down.
        onView(withId(R.id.page_down)).perform(click());
        onView(withId(R.id.page_down)).perform(click());
        onView(withId(R.id.page_down)).perform(click());
        verify(mockedCallback, times(3)).onScrollDownButtonClicked();
    }

    @Test
    public void testReachBottomCallback() {
        int itemCount = ITEMS_PER_PAGE * 2;
        setUpPagedListView(itemCount);

        PagedListView.Callback mockedCallback = mock(PagedListView.Callback.class);
        mPagedListView.registerCallback(mockedCallback);

        // Moving down to bottom of list.
        onView(withId(R.id.page_down)).perform(click());
        onView(withId(R.id.page_down)).perform(click());

        verify(mockedCallback, times(1)).onReachBottom();

        // Moving up should not cause a onReachBottom event.
        onView(withId(R.id.page_up)).perform(click());
        verify(mockedCallback, times(1)).onReachBottom();

        // Move to bottom of list again.
        onView(withId(R.id.page_down)).perform(click());
        verify(mockedCallback, times(2)).onReachBottom();
    }

    @Test
    public void testReachTopCallback() {
        int itemCount = ITEMS_PER_PAGE * 3;
        setUpPagedListView(itemCount);

        PagedListView.Callback mockedCallback = mock(PagedListView.Callback.class);
        mPagedListView.registerCallback(mockedCallback);

        // Moving up from the top of the list should not result in any onReachTop events as no
        // scrolling occurs.
        onView(withId(R.id.page_up)).perform(click());
        verify(mockedCallback, times(0)).onReachTop();

        // Moving down to bottom of list should not result in any onReachTop events.
        onView(withId(R.id.page_down)).perform(click());
        onView(withId(R.id.page_down)).perform(click());
        verify(mockedCallback, times(0)).onReachTop();

        // Moving up once should not result in any onReachTop events.
        onView(withId(R.id.page_up)).perform(click());
        verify(mockedCallback, times(0)).onReachTop();

        // Moving up once more to the top of the list should result in a onReachTop event.
        onView(withId(R.id.page_up)).perform(click());
        verify(mockedCallback, times(1)).onReachTop();
    }

    @Test
    public void testPageUpButtonDisabledAtTop() {
        int itemCount = ITEMS_PER_PAGE * 3;
        setUpPagedListView(itemCount);

        // Initially page_up button is disabled.
        onView(withId(R.id.page_up)).check(matches(not(isEnabled())));

        // Moving down, should enable the up bottom.
        onView(withId(R.id.page_down)).perform(click());
        onView(withId(R.id.page_up)).check(matches(isEnabled()));

        // Move back up; this should disable the up bottom again.
        onView(withId(R.id.page_up)).perform(click())
                .check(matches(not(isEnabled())));
    }

    @Test
    public void testItemSnappedToTopOfListOnScroll() throws InterruptedException {
        // 2.5 so last page is not full
        setUpPagedListView((int) (ITEMS_PER_PAGE * 2.5 /* itemCount */));

        // Going down one page and first item is snapped to top
        onView(withId(R.id.page_down)).perform(click());
        verifyItemSnappedToListTop();
    }

    @Test
    public void testLastItemSnappedWhenBottomReached() {
        // 2.5 so last page is not full
        setUpPagedListView((int) (ITEMS_PER_PAGE * 2.5 /* itemCount */));

        // Go down 2 pages so the bottom is reached.
        onView(withId(R.id.page_down)).perform(click());
        onView(withId(R.id.page_down)).perform(click()).check(matches(not(isEnabled())));

        // Check that the last item is completely visible.
        assertEquals(mRecyclerViewLayoutManager.findLastCompletelyVisibleItemPosition(),
                mRecyclerViewLayoutManager.getItemCount() - 1);
    }

    @Test
    public void testSwipeDownKeepsItemSnappedToTopOfList() {
        setUpPagedListView(ITEMS_PER_PAGE * 2 /* itemCount */);

        // Go down one page, then swipe down (going up).
        onView(withId(R.id.recycler_view)).perform(scrollToPosition(ITEMS_PER_PAGE));
        onView(withId(R.id.recycler_view))
                .perform(actionOnItemAtPosition(ITEMS_PER_PAGE, swipeDown()));

        verifyItemSnappedToListTop();
    }

    @Test
    public void testSwipeUpKeepsItemSnappedToTopOfList() {
        setUpPagedListView(ITEMS_PER_PAGE * 2 /* itemCount */);

        // Swipe up (going down).
        onView(withId(R.id.recycler_view))
                .perform(actionOnItemAtPosition(ITEMS_PER_PAGE, swipeUp()));

        verifyItemSnappedToListTop();
    }

    @LargeTest
    @Test
    public void testPageUpAndDownMoveSameDistance() {
        setUpPagedListView(ITEMS_PER_PAGE * 10);

        // Move down one page so there will be sufficient pages for up and downs.
        onView(withId(R.id.page_down)).perform(click());

        int topPosition = mRecyclerViewLayoutManager.findFirstVisibleItemPosition();

        for (int i = 0; i < 3; i++) {
            onView(withId(R.id.page_down)).perform(click());
            onView(withId(R.id.page_up)).perform(click());
        }

        assertThat(mRecyclerViewLayoutManager.findFirstVisibleItemPosition(),
                is(equalTo(topPosition)));
    }

    @Test
    public void setItemSpacing() throws Throwable {
        final int itemCount = 3;
        setUpPagedListView(itemCount /* itemCount */);

        // Initial spacing is 0.
        final View[] views = new View[itemCount];
        mActivityRule.runOnUiThread(() -> {
            for (int i = 0; i < mRecyclerViewLayoutManager.getChildCount(); i++) {
                views[i] = mRecyclerViewLayoutManager.getChildAt(i);
            }
        });
        for (int i = 0; i < itemCount - 1; i++) {
            assertThat(views[i + 1].getTop() - views[i].getBottom(), is(equalTo(0)));
        }

        // Setting item spacing causes layout change.
        // Implicitly wait for layout by making two calls in UI thread.
        final int itemSpacing = 10;
        mActivityRule.runOnUiThread(() -> {
            mPagedListView.setItemSpacing(itemSpacing);
        });
        mActivityRule.runOnUiThread(() -> {
            for (int i = 0; i < mRecyclerViewLayoutManager.getChildCount(); i++) {
                views[i] = mRecyclerViewLayoutManager.getChildAt(i);
            }
        });
        for (int i = 0; i < itemCount - 1; i++) {
            assertThat(views[i + 1].getTop() - views[i].getBottom(), is(equalTo(itemSpacing)));
        }

        // Re-setting spacing back to 0 also works.
        mActivityRule.runOnUiThread(() -> {
            mPagedListView.setItemSpacing(0);
        });
        mActivityRule.runOnUiThread(() -> {
            for (int i = 0; i < mRecyclerViewLayoutManager.getChildCount(); i++) {
                views[i] = mRecyclerViewLayoutManager.getChildAt(i);
            }
        });
        for (int i = 0; i < itemCount - 1; i++) {
            assertThat(views[i + 1].getTop() - views[i].getBottom(), is(equalTo(0)));
        }
    }

    @Test
    @UiThreadTest
    public void testSetScrollBarButtonIcons() throws Throwable {
        // Set up a pagedListView with a large item count to ensure the scroll bar buttons are
        // always showing.
        mPagedListView.setMaxPages(PagedListView.ItemCap.UNLIMITED);
        mPagedListView.setAdapter(
                new TestAdapter(/* itemCount= */ 100, mPagedListView.getHeight()));

        Drawable upDrawable = mActivity.getDrawable(R.drawable.ic_thumb_up);
        mPagedListView.setUpButtonIcon(upDrawable);

        ImageView upButton = mPagedListView.findViewById(R.id.page_up);
        ViewMatchers.assertThat(upButton.getDrawable().getConstantState(),
                is(equalTo(upDrawable.getConstantState())));

        Drawable downDrawable = mActivity.getDrawable(R.drawable.ic_thumb_down);
        mPagedListView.setDownButtonIcon(downDrawable);

        ImageView downButton = mPagedListView.findViewById(R.id.page_down);
        ViewMatchers.assertThat(downButton.getDrawable().getConstantState(),
                is(equalTo(downDrawable.getConstantState())));
    }

    @Test
    public void testNoVerticalPaddingOnScrollBar() {
        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);
        onView(withId(R.id.paged_scroll_view))
                .check(matches(withTopPadding(0)))
                .check(matches(withBottomPadding(0)));
    }

    @Test
    public void testDefaultScrollBarTopMargin() {
        Resources res = ApplicationProvider.getApplicationContext().getResources();
        int defaultTopMargin = res.getDimensionPixelSize(R.dimen.car_padding_4);

        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);
        onView(withId(R.id.paged_scroll_view)).check(matches(withTopMargin(defaultTopMargin)));
    }

    @Test
    public void testSetScrollbarTopMargin() throws Throwable {
        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);

        int topMargin = 100;
        mActivityRule.runOnUiThread(() -> mPagedListView.setScrollBarTopMargin(topMargin));

        onView(withId(R.id.paged_scroll_view)).check(matches(withTopMargin(topMargin)));
    }

    @Test
    public void testScrollBarThumbShowByDefault() {
        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);
        onView(withId(R.id.scrollbar_thumb)).check(matches(isDisplayed()));
    }

    @Test
    public void testScrollBarThumbIsHidden() throws Throwable {
        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);
        mActivityRule.runOnUiThread(() -> mPagedListView.setScrollbarThumbEnabled(false));
        onView(withId(R.id.scrollbar_thumb)).check(matches(not(isDisplayed())));
    }

    @Test
    public void testScrollBarToggleHidden() throws Throwable {
        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);
        mActivityRule.runOnUiThread(() -> mPagedListView.setScrollBarEnabled(false));
        onView(withId(R.id.paged_scroll_view)).check(matches(not(isDisplayed())));
        mActivityRule.runOnUiThread(() -> mPagedListView.setScrollBarEnabled(true));
        onView(withId(R.id.paged_scroll_view)).check(matches(isDisplayed()));
    }

    @Test
    public void testSetGutterNone() throws Throwable {
        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);

        int scrollBarContainerWidth =
                mPagedListView.findViewById(R.id.paged_scroll_view).getLayoutParams().width;

        mActivityRule.runOnUiThread(() -> mPagedListView.setGutter(PagedListView.Gutter.NONE));

        waitForIdleSync();

        assertThat(mRecyclerViewLayoutParams.getMarginStart(),
                is(equalTo(scrollBarContainerWidth)));
        assertThat(mRecyclerViewLayoutParams.getMarginEnd(), is(equalTo(0)));
    }

    @Test
    public void testSetGutterStart() throws Throwable {
        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);

        mActivityRule.runOnUiThread(() -> mPagedListView.setGutter(PagedListView.Gutter.START));

        waitForIdleSync();

        Resources res = ApplicationProvider.getApplicationContext().getResources();
        int gutterSize = res.getDimensionPixelSize(R.dimen.car_margin);

        assertThat(mRecyclerViewLayoutParams.getMarginStart(), is(equalTo(gutterSize)));
        assertThat(mRecyclerViewLayoutParams.getMarginEnd(), is(equalTo(0)));
    }

    @Test
    public void testSetGutterEnd() throws Throwable {
        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);

        int scrollBarContainerWidth =
                mPagedListView.findViewById(R.id.paged_scroll_view).getLayoutParams().width;

        mActivityRule.runOnUiThread(() -> mPagedListView.setGutter(PagedListView.Gutter.END));
        waitForIdleSync();

        Resources res = ApplicationProvider.getApplicationContext().getResources();
        int gutterSize = res.getDimensionPixelSize(R.dimen.car_margin);

        assertThat(mRecyclerViewLayoutParams.getMarginStart(),
                is(equalTo(scrollBarContainerWidth)));
        assertThat(mRecyclerViewLayoutParams.getMarginEnd(), is(equalTo(gutterSize)));
    }

    @Test
    public void testSetGutterBoth() throws Throwable {
        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);

        mActivityRule.runOnUiThread(() -> mPagedListView.setGutter(PagedListView.Gutter.BOTH));
        waitForIdleSync();

        Resources res = ApplicationProvider.getApplicationContext().getResources();
        int gutterSize = res.getDimensionPixelSize(R.dimen.car_margin);

        assertThat(mRecyclerViewLayoutParams.getMarginStart(), is(equalTo(gutterSize)));
        assertThat(mRecyclerViewLayoutParams.getMarginEnd(), is(equalTo(gutterSize)));
    }

    @Test
    public void testSetGutterSizeNone() throws Throwable {
        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);

        int scrollBarContainerWidth =
                mPagedListView.findViewById(R.id.paged_scroll_view).getLayoutParams().width;

        mActivityRule.runOnUiThread(() -> {
            mPagedListView.setGutter(PagedListView.Gutter.NONE);
            mPagedListView.setGutterSize(120);
        });

        waitForIdleSync();

        assertThat(mRecyclerViewLayoutParams.getMarginStart(),
                is(equalTo(scrollBarContainerWidth)));
        assertThat(mRecyclerViewLayoutParams.getMarginEnd(), is(equalTo(0)));
    }

    @Test
    public void testSetGutterSizeStart_GutterSmallerThanScrollBar() throws Throwable {
        // Just need enough items to ensure the scroll bar is showing.
        setUpPagedListView(ITEMS_PER_PAGE * 10);

        int scrollBarContainerWidth =
                mPagedListView.findViewById(R.id.paged_scroll_view).getLayoutParams().width;
        int gutterSize = scrollBarContainerWidth - 10;

        mActivityRule.runOnUiThread(() -> {
            mPagedListView.setGutter(PagedListView.Gutter.START);
            mPagedListView.setGutterSize(gutterSize);
        });

        waitForIdleSync();

        assertThat(mRecyclerViewLayoutParams.getMarginStart(),
                is(equalTo(scrollBarContainerWidth)));
        assertThat(mRecyclerViewLayoutParams.getMarginEnd(), is(equalTo(0)));
    }

    @Test
    public void testSetGutterSizeStart_GutterLargerThanScrollBar() throws Throwable {
